[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/theme.tres" type="Theme" id=2]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0.0666667, 0.0431373, 0.133333, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 289.0
margin_top = 151.0
margin_right = 351.0
margin_bottom = 209.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 62.0
margin_bottom = 22.0
text = "PAUSED"
align = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 62.0
margin_bottom = 40.0
text = "Resume"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 62.0
margin_bottom = 58.0
text = "Options"

[node name="MenuControls" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -20.0
margin_bottom = -15.0
rect_scale = Vector2( 0.6, 0.6 )
text = "Menu Controls: Arrow Keys / Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="playBlip"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="playBlip"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
